--- a/style_anime.css
+++ b/style_anime.css
@@ -15,6 +15,29 @@ header img {
     margin: 0 auto 10px;
 }
 
+nav ul {
+    list-style-type: none;
+    padding: 10px 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid purple;
+    border-bottom: 1px solid purple;
+}
+
+nav ul li {
+    display: inline-block;
+    margin: 0 15px;
+    position: relative;
+    padding: 5px 0;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: blue;
+    font-size: 18px;
+}
+
 footer p {
     text-align: center;
     background-color: peachpuff;
