renamed:    Imagenes de animes lista/Anime6.jpg -> Imagenes de animes lista/Anime53.jpg 	renamed:    Imagenes de animes lista/Anime7.jpg -> Imagenes de animes lista/Anime60.jpg 	renamed:    Imagenes de animes lista/Anime8.jpg -> Imagenes de animes lista/Anime66.jpg 	new file:   Imagenes de animes lista/Anime75.jpg 	renamed:    Imagenes de animes lista/Anime11.jpg -> Imagenes de animes lista/Anime79.jpg 	modified:   Imagenes de animes lista/Anime9.jpg 	renamed:    Imagenes de ovas y peliculas/Anime4.jpg -> Imagenes de ovas y peliculas/Anime11.jpg 	new file:   Imagenes de ovas y peliculas/Anime12.jpg 	modified:   Imagenes de ovas y peliculas/Anime2.jpg 	deleted:    Imagenes de ovas y peliculas/Anime3.jpg 	modified:   Imagenes de ovas y peliculas/Anime5.jpg 	modified:   anime.html 	modified:   contacto.html 	modified:   emision.html 	modified:   lista.html 	modified:   ovas_peliculas.html 	modified:   style_emision.css

--- a/style_emision.css
+++ b/style_emision.css
@@ -64,6 +64,13 @@ p {
     margin: 20px 0;
 }
 
+h4 {
+    color: grey;
+    text-align: justify;
+    margin: 20px 0;
+    font-size: 22px;
+}
+
 footer p {
     text-align: center;
     background-color: peachpuff;
