--- a/style_ovas_peliculas.css
+++ b/style_ovas_peliculas.css
@@ -64,6 +64,37 @@ p {
     margin: 20px 0;
 }
 
+h4 {
+    color: gray;
+    text-align: justify;
+    margin: 20px 0;
+    font-size: 18px;
+}
+
+table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 10px;
+    margin: 30px 0; /* Espacio entre cada tabla */
+    text-align: center; /* Centrar imágenes dentro de la tabla */
+}
+
+.animes {
+    border: 5px solid peachpuff;
+    padding: 15px;
+    text-align: center;
+    margin: 10px;
+}
+
+.animes img {
+    width: 250px; 
+    height: 400px;
+    object-fit: cover; 
+    border-radius: 8px;
+    vertical-align: middle; /* Mantener imágenes y texto alineados */
+    margin-bottom: 10px;
+}
+
 footer p {
     text-align: center;
     background-color: peachpuff;
